selfhost/test/parser/indexing_error_no_rbrack.out
Error at %FILE_NAME%:1:12
Unexpected token '}', expected one of ':', ']':
  |  [1, 2, 3][1}
                ^